!3273 feat(#I5SMLA): multiple select component use popover prevent overflow * refactor: 优化脚本 * fix: 修复 Select 搜索框样式 * refactor: 更新 Select 脚本 * revert: 移除 component 脚本 * feat: 增加 longbow.component 脚本 * feat: 支持容器 overflow: hidden 显示不全问题 * chore: 更新样式脚本

--- a/src/BootstrapBlazor/Components/Select/Select.css
+++ b/src/BootstrapBlazor/Components/Select/Select.css
@@ -3,16 +3,10 @@
     --bb-select-focus-shadow: none;
     --bb-select-bg: #fff;
     --bb-select-padding: 6px 2.25rem 6px 0.75rem;
-    --bb-select-dropdown-max-height: var(--bb-dropdown-max-height);
 }
 
 :where(.cascade, .select) {
     --bb-select-dropdown-menu-margin-top: 8px;
-}
-
-.select .dropdown-menu {
-    overflow-x: hidden;
-    width: 100%;
 }
 
 .select .dropdown-toggle::after {
@@ -37,11 +31,8 @@
     }
 
 .dropdown-menu {
-    overflow: auto;
-}
-
-.dropdown-menu {
     --bs-dropdown-border-radius: var(--bs-border-radius);
+    overflow: auto;
     max-height: var(--bb-select-dropdown-max-height);
 }
 
@@ -122,26 +113,6 @@
     transform: rotate(0);
 }
 
-.select .search {
-    padding: 7px 10px;
-    position: relative;
-    border-bottom: 1px solid #ddd;
-    padding-bottom: 0.625rem;
-    margin-bottom: 0.5rem;
-}
-
-    .select .search .search-text {
-        width: 100%;
-        padding-right: 30px;
-    }
-
-    .select .search .fa-magnifying-glass {
-        position: absolute;
-        left: calc(100% - 34px);
-        top: 18px;
-        color: #adb5bd;
-    }
-
 .form-select.is-valid:focus,
 .was-validated .form-select:valid:focus,
 .form-select.is-invalid:focus,
@@ -181,6 +152,27 @@
 }
 
 .popover-body .dropdown-menu {
+    --bb-select-dropdown-max-height: var(--bb-dropdown-max-height);
     position: relative;
     border: none;
 }
+
+    .popover-body .dropdown-menu .search {
+        padding: 7px 10px;
+        position: relative;
+        border-bottom: 1px solid #ddd;
+        padding-bottom: 0.625rem;
+        margin-bottom: 0.5rem;
+    }
+
+        .popover-body .dropdown-menu .search .search-text {
+            width: 100%;
+            padding-right: 30px;
+        }
+
+        .popover-body .dropdown-menu .search .fa-magnifying-glass {
+            position: absolute;
+            left: calc(100% - 34px);
+            top: 18px;
+            color: #adb5bd;
+        }
